<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/root_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/main_navigation_bar"
        app:layout_constraintTop_toTopOf="parent"/>


    <com.google.android.material.tabs.TabLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/main_navigation_bar"
        >

        <com.google.android.material.tabs.TabItem
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="Events"
            />
        <com.google.android.material.tabs.TabItem
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="Notifications"
            />
        <com.google.android.material.tabs.TabItem
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="My Profile"
            />


    </com.google.android.material.tabs.TabLayout>


</androidx.constraintlayout.widget.ConstraintLayout>