<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/profile_image_preview"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="5dp" />

    <Button
        android:id="@+id/profile_image_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Upload Photo" />

    <Button
        android:id="@+id/delete_profile_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Remove Photo" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="Name" />
    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="Email" />
    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="Phone" />
    <Spinner
        android:id="@+id/editAccountType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextPhone"
        android:layout_marginTop="10dp" />


</LinearLayout>