<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/event_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventsPage.EventsFragment">

    <Button
        android:id="@+id/waitlist_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="View Waitlist"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/admin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Admin Page"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ListView
        android:id="@+id/event_feed"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/waitlist_view"
        app:layout_constraintBottom_toTopOf="@+id/create_event_facility_button"
        >

    </ListView>

    <Button
        android:id="@+id/create_event_facility_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_event"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/scan_qr_utton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Scan QR Code"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>