<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">

    <!-- Profile picture circle -->
    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:scaleType="centerCrop"
        android:background="@drawable/circle_shape"/>

    <!--android:src="@drawable/default_profile_picture"-->

    <!-- Name Input -->
    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profileImage"
        android:layout_marginTop="30dp"
        android:hint="Enter Name" />

    <!-- Email Input -->
    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextName"
        android:layout_marginTop="10dp"
        android:hint="Enter Email" />

    <!-- Phone Input -->
    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextEmail"
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:hint="Enter Phone (Optional)" />

    <!-- Submit Button -->
    <Spinner
        android:id="@+id/editAccountType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextPhone"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/notification_switch"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="Submit" />

    <Switch
        android:id="@+id/notification_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editAccountType"
        android:layout_marginTop="10dp"
        android:text="Allow Notifications" />

</RelativeLayout>