<resources>
    <string name="app_name">Prince Project</string>
    <string name="create_event">Create Event</string>
    <string-array name="accountTypes">
        <item>User</item>
        <item>Organizer</item>
    </string-array>
    <string name="channel_name">Channel Name</string>
    <string name="channel_description">Channel Name</string>
</resources>